# DeepResearch

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml
benchmarks/: results.json  throughput.py
orchestrator/: .dockerignore  Dockerfile  pyproject.toml
orchestrator/frontend/: package-lock.json  package.json  vite.config.ts
orchestrator/frontend/src/: App.tsx  index.css  main.tsx
orchestrator/frontend/src/components/layout/: Shell.tsx  Sidebar.tsx  StatusBar.tsx
orchestrator/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Textarea.tsx
orchestrator/frontend/src/lib/: api.ts  utils.ts
orchestrator/frontend/src/pages/: HistoryPage.tsx  ResearchPage.tsx  SettingsPage.tsx
orchestrator/src/: config.py  main.py  model_manager.py  models.py  research.py
orchestrator/src/agent/: __init__.py  swarm.py  tools.py
orchestrator/src/core/: __init__.py  completeness.py  temporal.py
orchestrator/src/llm/: __init__.py  batch.py  client.py  prompts.py
orchestrator/src/mcp/: server.py
orchestrator/src/sources/: __init__.py  arxiv.py  github.py  huggingface.py  reddit.py  semantic.py  web.py  wikipedia.py  youtube.py
orchestrator/src/storage/: __init__.py  hivemind.py  models.py
searxng/: settings.yml
vllm/: start.sh
