[project]
name = "deepresearch"
version = "0.1.0"
description = "Hyper-parallel AI research agent with persistent knowledge graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "trafilatura>=2.0.0",
    "arxiv>=2.1.0",
    "youtube-transcript-api>=1.0.0",
    "huggingface-hub>=0.28.0",
    "mcp>=1.0.0",
    "websockets>=14.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
